src/gnome-shell-plugin.c
@@ -105,9 +105,6 @@ static void
 gnome_shell_plugin_start (MetaPlugin *plugin)
 {
   GnomeShellPlugin *shell_plugin = GNOME_SHELL_PLUGIN (plugin);
-  GError *error = NULL;
-  uint8_t status;
-  GjsContext *gjs_context;
   ClutterBackend *backend;
 
   backend = clutter_get_default_backend ();
@@ -123,30 +120,6 @@ gnome_shell_plugin_start (MetaPlugin *plugin)
 
   shell_plugin->global = shell_global_get ();
   _shell_global_set_plugin (shell_plugin->global, META_PLUGIN (shell_plugin));
-
-  gjs_context = _shell_global_get_gjs_context (shell_plugin->global);
-
-  if (!gjs_context_eval_module_file (gjs_context,
-                                     "resource:///org/gnome/shell/ui/init.js",
-                                     &status,
-                                     &error))
-    {
-      g_message ("Execution of main.js threw exception: %s", error->message);
-      g_error_free (error);
-      /* We just exit() here, since in a development environment you'll get the
-       * error in your shell output, and it's way better than a busted WM,
-       * which typically manifests as a white screen.
-       *
-       * In production, we shouldn't crash =)  But if we do, we should get
-       * restarted by the session infrastructure, which is likely going
-       * to be better than some undefined state.
-       *
-       * If there was a generic "hook into bug-buddy for non-C crashes"
-       * infrastructure, here would be the place to put it.
-       */
-      g_object_unref (gjs_context);
-      exit (1);
-    }
 }
 
 static ShellWM *
